--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     form.addEventListener("submit", (event) => {
       event.preventDefault();
       const name = document.getElementById("name").value;
-      output.textContent = "Hello, " + name + "!";
+      output.textContent = "Hello there " + name;
     });
   </script>
 </body>
